--- a/views/default.pug
+++ b/views/default.pug
@@ -4,6 +4,7 @@ html(lang="fr")
         title Kinomap - #{title}
         block css
             link(rel='stylesheet', href='/css/style.css')
+            link(href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" rel="stylesheet")
         meta(name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
         meta(name="Content-Type" content="text/html; charset=utf-8")
         meta(name="description" content=description)
@@ -12,3 +13,9 @@ html(lang="fr")
 
 
     include includes/index.pug
+
+
+
+
+    script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js")
+    script(type="text/javascript" src="./js/carousel.js")
