--- a/views/default.pug
+++ b/views/default.pug
@@ -16,7 +16,11 @@ html(lang="fr")
         div.container
             div.carousel#carousel
                 each val, index in fetchedData
-                    img(class=".item-"+ index src=val.image alt=val.name)
+                    div.card
+                        div(class=".card-image " + val.name+"Div")
+                            img(class=".item-"+ index + " " + val.name src=val.image alt=val.name)
+                        div.card-content
+                            h2=val.name
                 
 
     
